--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <td colspan="4" style="text-align:center">
                                     <a href="https://azbykamed.ru/"
                                         data-link-id="2" target="_blank" rel="noopener noreferrer"><img alt="Logo"
-                                            src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fforget_pass_header.jpg&amp;proxy=yes&amp;key=e0168799b340c4ab6b53a97723b718ef"
+                                            src="https://azbykamed.ru/upload/reset_mail.png"
                                             width="740"></a>
                                 </td>
                             </tr>
@@ -205,7 +205,7 @@
                                 <td colspan="4" style="text-align:center">
                                     <a href="https://azbykamed.ru/personal-area/"
                                         data-link-id="7" target="_blank" rel="noopener noreferrer"><img alt="Logo"
-                                            src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2Ffooter.png&amp;proxy=yes&amp;key=137ccce72868b0266e8c2392a258ffd8"></a>
+                                            src="https://azbykamed.ru/upload/mail.png"></a>
                                 </td>
                             </tr>
                             <tr>
