--- a/reset.html
+++ b/reset.html
@@ -38,8 +38,6 @@
                 </div>
                 <div class="2ba42652458901b1webkit 36f37027c397de7ewebkit-fixed"
                     style="background:#ffffff;border:1px solid #cccccc;max-width:742px;width:742px">
-
-
                     <table cellpadding="0" cellspacing="0"
                         style="background-color:#fff;border:1px solid #dbdddf;border-collapse:collapse;color:#000;font:16px 'myriad' , 'arial' , 'tahoma' , sans-serif;margin:0;max-width:742px;min-width:742px;padding:0;text-align:center;width:742px">
                         <tbody>
@@ -47,21 +45,21 @@
                                 <td colspan="4" style="text-align:center">
                                     <a href="https://azbykamed.ru/"
                                         data-link-id="2" target="_blank" rel="noopener noreferrer"><img alt="Logo"
-                                            src="https://azbykamed.ru/upload/reset_mail.png"
+                                            src="https://azbykamed.ru/local/templates/main/assets/img/mail/reset_mail.png"
                                             width="740"></a>
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="20"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="20"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -87,25 +85,25 @@
                                                             <tr style="margin:0;padding:0">
                                                                 <td colspan="3" style="margin:0;padding:0">
                                                                     <img alt="Logo" height="15"
-                                                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2Finput_top.png&amp;proxy=yes&amp;key=1a84b00659cbc7ca24919607bc5dbc19"
+                                                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/top_line.png"
                                                                         width="363" style="display:block">
                                                                 </td>
                                                             </tr>
                                                             <tr style="margin:0;padding:0">
                                                                 <td style="text-align:left"><img alt="Logo" height="24"
-                                                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2Finput_left.png&amp;proxy=yes&amp;key=2458ec21ddded48c8171f82da2fc0edb"
+                                                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/left_line.png"
                                                                         width="15" style="display:block"></td>
                                                                 <td
                                                                     style="background-color:#fff;color:#5e5e5e;width:333px">
                                                                     564542</td>
                                                                 <td style="text-align:right"><img alt="Logo" height="24"
-                                                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2Finput_right.png&amp;proxy=yes&amp;key=27ed86fb743ed072f2be40f9e1562b33"
+                                                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/right_line.png"
                                                                         width="15" style="display:block"></td>
                                                             </tr>
                                                             <tr style="margin:0;padding:0">
                                                                 <td colspan="3" style="margin:0;padding:0"><img
                                                                         alt="Logo" height="15"
-                                                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2Finput_down.png&amp;proxy=yes&amp;key=a70321f4ba382fc900bfd51e6e53a440"
+                                                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/bottom_line.png"
                                                                         width="363" style="display:block"></td>
                                                             </tr>
                                                         </tbody>
@@ -136,7 +134,7 @@
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="20"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -144,7 +142,7 @@
                                 <td colspan="4" style="text-align:center">
                                     <a href="https://azbykamed.ru/help-personal/" data-link-id="3" target="_blank"
                                         rel="noopener noreferrer"><img alt="Logo"
-                                            src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2F03.png&amp;proxy=yes&amp;key=eb8cfa264cd7668999924f6421d0d929"
+                                            src="https://azbykamed.ru/local/templates/main/assets/img/mail/question_mail.png"
                                             style="vertical-align:bottom"></a>&nbsp;&nbsp;<a
                                         href="https://azbykamed.ru/help-personal/"
                                         style="color:#25a0d4;font:15px 'myriad' , 'arial' , 'tahoma' , sans-serif"
@@ -155,14 +153,14 @@
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="20"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="15"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -172,7 +170,7 @@
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="10"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -184,7 +182,7 @@
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="10"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -197,7 +195,7 @@
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="10"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -205,13 +203,13 @@
                                 <td colspan="4" style="text-align:center">
                                     <a href="https://azbykamed.ru/personal-area/"
                                         data-link-id="7" target="_blank" rel="noopener noreferrer"><img alt="Logo"
-                                            src="https://azbykamed.ru/upload/mail.png"></a>
+                                            src="https://azbykamed.ru/local/templates/main/assets/img/mail/mail.png"></a>
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="25"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
@@ -220,25 +218,21 @@
                                     <p>
                                         <a href="http://81.200.148.127:8080/auth"
                                             target="_blank" data-link-id="8" rel="noopener noreferrer"><img alt="Logo"
-                                                src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2FSendEmail%2FbutLK.png&amp;proxy=yes&amp;key=818ce5e60382ba16ae3d9b506a4b079f"></a>
+                                                src="https://azbykamed.ru/local/templates/main/assets/img/mail/href.png"></a>
                                     </p>
                                 </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
                                     <img class="2c4382f9e106b020pad_null" height="25"
-                                        src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fhelix.ru%2FContent%2FImages%2Femail%2Fwhite.png&amp;proxy=yes&amp;key=45476dad5a27830e991dd3aa577e767c"
+                                        src="https://azbykamed.ru/local/templates/main/assets/img/mail/line.png"
                                         width="740" style="border:medium;display:block;margin:0;padding:0">
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-
             </center>
-            <img height="1"
-                src="https://resize.yandex.net/mailservice?url=http%3A%2F%2Fstats.digitalcontactmails.net%2Ftrack%2F204ae-000-0e4-000-6470a796-28f1765c26c19d.gif&amp;proxy=yes&amp;key=1106c1111f0f1f2ee551480e7264eb26"
-                width="1">
         </div>
     </div>
 </article>
